--- a/email/src/main/resources/static/index.html
+++ b/email/src/main/resources/static/index.html
@@ -1,30 +1,481 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>Enviar correo</title>
-</head>
-<body>
-<h2>Enviar correo</h2>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Enviar correo • Acción inmediata</title>
 
-<form id="form">
-    <input type="email" id="to" placeholder="Correo destino" required><br><br>
-    <textarea id="message" placeholder="Mensaje" required></textarea><br><br>
-    <button type="submit">Enviar</button>
-</form>
+    <style>
+        :root{
+            --bg1:#0b1020;
+            --bg2:#0a2a43;
+            --card: rgba(255,255,255,.08);
+            --stroke: rgba(255,255,255,.16);
+            --text: rgba(255,255,255,.92);
+            --muted: rgba(255,255,255,.70);
+            --accent:#7c5cff;
+            --accent2:#26d6ff;
+            --good:#22c55e;
+            --bad:#ef4444;
+            --warn:#f59e0b;
+            --shadow: 0 18px 70px rgba(0,0,0,.45);
+            --radius: 18px;
+        }
+
+        * { box-sizing: border-box; }
+        body{
+            margin:0;
+            min-height:100vh;
+            font-family: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
+            color: var(--text);
+            background:
+                    radial-gradient(1200px 600px at 20% 10%, rgba(124,92,255,.35), transparent 55%),
+                    radial-gradient(900px 500px at 90% 25%, rgba(38,214,255,.25), transparent 60%),
+                    radial-gradient(1200px 700px at 50% 100%, rgba(34,197,94,.14), transparent 55%),
+                    linear-gradient(135deg, var(--bg1), var(--bg2));
+            display:grid;
+            place-items:center;
+            padding: 28px 16px;
+        }
+
+        .wrap{
+            width: min(980px, 100%);
+            display:grid;
+            grid-template-columns: 1.05fr .95fr;
+            gap: 18px;
+            align-items: stretch;
+        }
+
+        @media (max-width: 900px){
+            .wrap{ grid-template-columns: 1fr; }
+        }
+
+        .hero, .card{
+            border-radius: var(--radius);
+            background: var(--card);
+            border: 1px solid var(--stroke);
+            box-shadow: var(--shadow);
+            backdrop-filter: blur(14px);
+            -webkit-backdrop-filter: blur(14px);
+            overflow:hidden;
+            position: relative;
+        }
+
+        .hero{
+            padding: 26px 24px;
+            display:flex;
+            flex-direction: column;
+            justify-content: space-between;
+            gap: 18px;
+        }
+
+        .badge{
+            display:inline-flex;
+            align-items:center;
+            gap: 10px;
+            padding: 10px 12px;
+            border-radius: 999px;
+            background: rgba(255,255,255,.08);
+            border: 1px solid rgba(255,255,255,.14);
+            width: fit-content;
+            letter-spacing: .2px;
+        }
+
+        .dot{
+            width:10px;height:10px;border-radius:99px;
+            background: linear-gradient(135deg, var(--accent), var(--accent2));
+            box-shadow: 0 0 0 4px rgba(124,92,255,.18);
+        }
+
+        h1{
+            margin: 6px 0 0;
+            font-size: clamp(26px, 3.2vw, 42px);
+            line-height: 1.05;
+        }
+        .sub{
+            margin: 10px 0 0;
+            color: var(--muted);
+            font-size: 14.5px;
+            line-height: 1.5;
+            max-width: 56ch;
+        }
+
+        .imperative{
+            display:flex;
+            gap:10px;
+            flex-wrap: wrap;
+            margin-top: 8px;
+        }
+
+        .pill{
+            padding: 10px 12px;
+            border-radius: 999px;
+            font-size: 12.5px;
+            background: rgba(255,255,255,.07);
+            border: 1px solid rgba(255,255,255,.14);
+            color: rgba(255,255,255,.86);
+        }
+        .pill strong{ color: #fff; }
+
+        .tips{
+            display:grid;
+            gap: 10px;
+            margin-top: 4px;
+        }
+
+        .tip{
+            display:flex;
+            gap: 10px;
+            padding: 12px 14px;
+            border-radius: 14px;
+            background: rgba(0,0,0,.16);
+            border: 1px solid rgba(255,255,255,.10);
+            color: rgba(255,255,255,.84);
+            font-size: 13.5px;
+            line-height: 1.35;
+        }
+
+        .tip svg{ flex: 0 0 auto; opacity: .9; margin-top: 2px; }
+
+        .card{
+            padding: 22px 20px 18px;
+            display:flex;
+            flex-direction: column;
+            gap: 14px;
+        }
+
+        .card h2{
+            margin:0;
+            font-size: 18px;
+            letter-spacing: .2px;
+        }
+
+        .row{
+            display:grid;
+            gap: 8px;
+        }
+
+        label{
+            font-size: 12px;
+            color: rgba(255,255,255,.78);
+        }
+
+        input, textarea{
+            width:100%;
+            border-radius: 14px;
+            border: 1px solid rgba(255,255,255,.14);
+            background: rgba(0,0,0,.18);
+            color: var(--text);
+            padding: 12px 14px;
+            outline: none;
+            transition: border .2s, transform .2s, box-shadow .2s;
+        }
+
+        textarea{
+            min-height: 130px;
+            resize: vertical;
+            line-height: 1.45;
+        }
+
+        input:focus, textarea:focus{
+            border-color: rgba(38,214,255,.55);
+            box-shadow: 0 0 0 4px rgba(38,214,255,.15);
+            transform: translateY(-1px);
+        }
+
+        .meta{
+            display:flex;
+            justify-content: space-between;
+            gap: 10px;
+            color: rgba(255,255,255,.65);
+            font-size: 12px;
+            margin-top: -4px;
+        }
+
+        .counter strong{ color: rgba(255,255,255,.9); }
+
+        .actions{
+            display:flex;
+            gap: 10px;
+            flex-wrap: wrap;
+            margin-top: 4px;
+        }
+
+        button{
+            cursor:pointer;
+            border: none;
+            border-radius: 14px;
+            padding: 12px 14px;
+            font-weight: 700;
+            letter-spacing: .3px;
+            color: #0b1020;
+            background: linear-gradient(135deg, var(--accent), var(--accent2));
+            box-shadow: 0 14px 35px rgba(124,92,255,.22);
+            transition: transform .15s, filter .15s, box-shadow .2s;
+            display:inline-flex;
+            align-items:center;
+            justify-content:center;
+            gap: 10px;
+            min-width: 190px;
+        }
+
+        button:hover{ transform: translateY(-1px); filter: brightness(1.05); }
+        button:active{ transform: translateY(0px); filter: brightness(.98); }
+        button:disabled{
+            cursor:not-allowed;
+            opacity:.72;
+            filter: grayscale(.1);
+            box-shadow:none;
+        }
+
+        .btn-ghost{
+            min-width: 140px;
+            background: rgba(255,255,255,.08);
+            color: rgba(255,255,255,.92);
+            border: 1px solid rgba(255,255,255,.16);
+            box-shadow: none;
+            font-weight: 600;
+        }
+
+        .status{
+            border-radius: 14px;
+            border: 1px solid rgba(255,255,255,.14);
+            padding: 12px 14px;
+            background: rgba(0,0,0,.14);
+            font-size: 13px;
+            display:flex;
+            align-items: flex-start;
+            gap: 10px;
+            line-height: 1.35;
+            min-height: 44px;
+        }
+
+        .status[data-kind="idle"] { color: rgba(255,255,255,.72); }
+        .status[data-kind="loading"] { color: rgba(255,255,255,.82); }
+        .status[data-kind="ok"] { border-color: rgba(34,197,94,.30); color: rgba(220,255,235,.92); }
+        .status[data-kind="error"] { border-color: rgba(239,68,68,.32); color: rgba(255,230,230,.92); }
+
+        .spinner{
+            width: 18px; height: 18px;
+            border-radius: 999px;
+            border: 2px solid rgba(255,255,255,.35);
+            border-top-color: rgba(255,255,255,.95);
+            animation: spin .9s linear infinite;
+            margin-top: 2px;
+            display:none;
+        }
+        .status[data-kind="loading"] .spinner{ display:block; }
+
+        @keyframes spin{ to{ transform: rotate(360deg);} }
+
+        .kbd{
+            font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+            font-size: 12px;
+            padding: 3px 6px;
+            border-radius: 8px;
+            border: 1px solid rgba(255,255,255,.14);
+            background: rgba(0,0,0,.18);
+            color: rgba(255,255,255,.82);
+        }
+
+        .footer{
+            display:flex;
+            justify-content: space-between;
+            gap: 10px;
+            color: rgba(255,255,255,.55);
+            font-size: 12px;
+            margin-top: 2px;
+        }
+
+        .glow{
+            position:absolute;
+            inset:-120px -140px auto auto;
+            width: 340px; height: 340px;
+            background: radial-gradient(circle at 30% 30%, rgba(38,214,255,.35), transparent 60%);
+            filter: blur(20px);
+            opacity: .75;
+            pointer-events:none;
+        }
+    </style>
+</head>
+
+<body>
+<main class="wrap">
+    <!-- HERO -->
+    <section class="hero" aria-label="Panel de motivación">
+        <div class="glow"></div>
+        <div>
+            <div class="badge">
+                <span class="dot" aria-hidden="true"></span>
+                <span><strong>Acción inmediata</strong> • Envía tu correo con intención</span>
+            </div>
+
+            <h1>Escribe. Impacta. <br/>Envía ahora.</h1>
+            <p class="sub">
+                No lo dejes para después. Redacta un mensaje claro, revísalo en segundos y haz clic en
+                <strong>“¡Enviar ya!”</strong>. Tu usuario necesita sentir que esto avanza.
+            </p>
+
+            <div class="imperative" aria-label="Instrucciones rápidas">
+                <span class="pill">1) <strong>Define</strong> el destinatario</span>
+                <span class="pill">2) <strong>Redacta</strong> en modo claro</span>
+                <span class="pill">3) <strong>Revisa</strong> y <strong>dispara</strong></span>
+            </div>
+        </div>
+
+        <div class="tips" aria-label="Sugerencias">
+            <div class="tip">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                    <path d="M12 2l3 7 7 3-7 3-3 7-3-7-7-3 7-3 3-7z" stroke="white" stroke-opacity=".9" stroke-width="1.8" stroke-linejoin="round"/>
+                </svg>
+                <div><strong>Tip:</strong> Una frase de apertura + una acción concreta = correos que se ejecutan.</div>
+            </div>
+            <div class="tip">
+                <svg width="18" height="18" viewBox="0 0 24 24" fill="none" aria-hidden="true">
+                    <path d="M20 7l-8 9-4-4" stroke="white" stroke-opacity=".9" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                </svg>
+                <div><strong>Checklist:</strong> destino correcto, mensaje breve, tono claro. Luego… ¡envía!</div>
+            </div>
+        </div>
+
+        <div class="footer">
+            <span>Atajo: <span class="kbd">Ctrl</span> + <span class="kbd">Enter</span> para enviar</span>
+            <span>Diseño: UI enfocada a acción</span>
+        </div>
+    </section>
+
+    <!-- FORM CARD -->
+    <section class="card" aria-label="Formulario de envío">
+        <h2>⚡ Envío rápido</h2>
+
+        <form id="form" autocomplete="on">
+            <div class="row">
+                <label for="to">Destino (obligatorio)</label>
+                <input type="email" id="to" placeholder="ej: usuario@dominio.com" required />
+            </div>
+
+            <div class="row">
+                <label for="message">Mensaje (obligatorio)</label>
+                <textarea id="message" placeholder="Escribe el mensaje. Sé directo. Pide una acción concreta." required></textarea>
+                <div class="meta">
+                    <span class="hint">Consejo: cierra con una acción: “Confirma hoy” / “Responde con OK”.</span>
+                    <span class="counter"><strong id="count">0</strong>/800</span>
+                </div>
+            </div>
+
+            <div class="actions">
+                <button id="sendBtn" type="submit" aria-label="Enviar correo">
+                    <span id="sendLabel">¡Enviar ya!</span>
+                </button>
+
+                <button class="btn-ghost" id="clearBtn" type="button" aria-label="Limpiar formulario">
+                    Limpiar
+                </button>
+            </div>
+        </form>
+
+        <div id="status" class="status" data-kind="idle" role="status" aria-live="polite">
+            <div class="spinner" aria-hidden="true"></div>
+            <div id="statusText">Listo. Escribe tu mensaje y presiona <strong>¡Enviar ya!</strong></div>
+        </div>
+    </section>
+</main>
 
 <script>
-    document.getElementById("form").addEventListener("submit", function(e) {
+    const form = document.getElementById("form");
+    const to = document.getElementById("to");
+    const message = document.getElementById("message");
+    const statusBox = document.getElementById("status");
+    const statusText = document.getElementById("statusText");
+    const sendBtn = document.getElementById("sendBtn");
+    const sendLabel = document.getElementById("sendLabel");
+    const clearBtn = document.getElementById("clearBtn");
+    const count = document.getElementById("count");
+
+    const MAX = 800;
+
+    function setStatus(kind, html){
+        statusBox.dataset.kind = kind;
+        statusText.innerHTML = html;
+    }
+
+    function setLoading(isLoading){
+        sendBtn.disabled = isLoading;
+        to.disabled = isLoading;
+        message.disabled = isLoading;
+        clearBtn.disabled = isLoading;
+
+        sendLabel.textContent = isLoading ? "Enviando..." : "¡Enviar ya!";
+        setStatus(isLoading ? "loading" : "idle",
+            isLoading
+                ? "Transmitiendo tu mensaje… <strong>No cierres</strong> esta pestaña."
+                : "Listo. Escribe tu mensaje y presiona <strong>¡Enviar ya!</strong>"
+        );
+    }
+
+    // Contador + límite suave
+    message.addEventListener("input", () => {
+        const len = message.value.length;
+        if (len > MAX) message.value = message.value.slice(0, MAX);
+        count.textContent = Math.min(len, MAX);
+    });
+
+    // Atajo Ctrl+Enter
+    message.addEventListener("keydown", (e) => {
+        if ((e.ctrlKey || e.metaKey) && e.key === "Enter") {
+            form.requestSubmit();
+        }
+    });
+
+    // Limpiar
+    clearBtn.addEventListener("click", () => {
+        form.reset();
+        count.textContent = "0";
+        setStatus("idle", "Borrado. Ahora escribe algo <strong>mejor</strong> y… ¡envíalo!");
+        to.focus();
+    });
+
+    form.addEventListener("submit", async (e) => {
         e.preventDefault();
 
-        fetch("/api/email", {
-            method: "POST",
-            headers: { "Content-Type": "application/json" },
-            body: JSON.stringify({
-                to: document.getElementById("to").value,
-                message: document.getElementById("message").value
-            })
-        }).then(() => alert("Correo enviado"));
+        const toValue = to.value.trim();
+        const msgValue = message.value.trim();
+
+        if (!toValue || !msgValue) {
+            setStatus("error", "Falta algo: <strong>destino</strong> y <strong>mensaje</strong> son obligatorios.");
+            return;
+        }
+
+        try {
+            setLoading(true);
+
+            const res = await fetch("/api/email", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({ to: toValue, message: msgValue })
+            });
+
+            if (!res.ok) {
+                // Intenta leer un mensaje del backend si viene en JSON/texto
+                let details = "";
+                try {
+                    const ct = res.headers.get("content-type") || "";
+                    details = ct.includes("application/json") ? (await res.json()).message : await res.text();
+                } catch (_) {}
+                throw new Error(details || ("HTTP " + res.status));
+            }
+
+            setStatus("ok", "✅ Enviado. Excelente. <strong>Ahora espera respuesta</strong> o envía el siguiente.");
+            form.reset();
+            count.textContent = "0";
+            to.focus();
+
+        } catch (err) {
+            setStatus("error", "❌ No se pudo enviar. <strong>Reintenta</strong> y valida el endpoint. Detalle: " +
+                `<span style="opacity:.9">${String(err.message || err)}</span>`);
+        } finally {
+            setLoading(false);
+        }
     });
 </script>
 </body>
